--- a/assets/styles/sign-in.css
+++ b/assets/styles/sign-in.css
@@ -1,3 +1,4 @@
+
 body{
     min-height: 100vh;
     width: 100%;
@@ -16,31 +17,90 @@ body{
 }
 
 .container{
-    width: 600px;
-    height: 300px;
     background-color: #fff;
     display: flex;
     border: 1px solid #28A5C6;
-    
+    flex-wrap: wrap;
+}
+
+@media (max-width: 767px) {
+    .container {
+        margin: 16px;
+    }
 }
 
 .container .container-img{
-    width: 300px;
-    height: 300px;
+    width: 320px;
     display: flex;
-  /*  align-content: center;*/
-    padding-top: 50px;
+    align-items: center;
+    flex-direction: row;
     background-color: #28A5C6;
-
 }
 
-.container form{
+
+@media (max-width: 767px) {
+    .container .container-img{
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .container .container-img h3{
+        margin: 0 0 32px 0;
+    }
+
+    .container .container-form{
+        width: 100% !important;
+    }
+}
+
+.container .container-form{
+    display: flex;
+    width: 280px;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    padding: 16px;
+}
+
+.container .form-group {
     display: flex;
     flex-direction: column;
-    width: 300px;
-    height: 300px;
+    margin-bottom: 32px;
 }
 
+.container .container-form form {
+    margin-top: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container .container-form .info {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: nowrap;
+}
+
+.container .container-form .info h5 {
+    margin-right: 16px;
+}
+
+.container .form-group label {
+    color: #28A5C6;
+    font-size: 16px;
+}
+.container .container-form input.form-control {
+    border: none;
+    border-bottom: 2px solid #28A5C6;
+    background-color: transparent;
+    padding: 7px 2px;
+    font-size: 18px;
+}
+
+.container .form-group input.form-control:focus {
+    outline: none;
+}
 
 .container h3{
     color: #fff;
@@ -54,8 +114,31 @@ body{
     cursor: pointer;
     border-radius: 25px;
     padding: 10px;
-    width: 240px;
+    width: 200px;
     color: white;
     box-shadow: 0 3px 6px 0 rgba(0,0,0,0.2);
     align-self: center;
 }
+
+.container .container-form h5{
+    display: flex;
+    justify-content: center;
+}
+
+.container .container-form a{
+    display: flex;
+    justify-content: center;
+    
+}
+a:link {
+    color: #28A5C6;
+}
+
+a:visited {
+    color: purple;
+}
+
+a:hover {
+    color: cornflowerblue;
+}
+
